--- a/notification-microservice/src/main/resources/application.yml
+++ b/notification-microservice/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
       bootstrap-servers:
         - localhost:9092
         - localhost:9094
-      #      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      #      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       group-id: product-created-events
       properties:
         spring:
