--- a/notification-microservice/pom.xml
+++ b/notification-microservice/pom.xml
@@ -63,6 +63,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.wbt.notificationmicroservice.NotificationMicroserviceApplicationKt</mainClass>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
